Configuração da Sobre1

--- a/index.html
+++ b/index.html
@@ -26,24 +26,25 @@
     	</header>
         
         <main>
-            <section>
+            <section id="sobre">
                 <div>
-                    <h2>Sobre</h2>
+                    <h1>Sobre</h1>
+                    <!-- Tive que trocar para h1 -->
                     <p>Em 2012 iniciou-se as ações sociais, no bairro  Alto do Caxanga na cidade de Carapebus a localidade encontra-se em processo de favelização, (dados comprovados pelo CRAS), onde percebeu-se a carência de um projeto estruturado, podendo ter ações contínuas, com a experiência acumulada iniciou-se em 2015 efetivamente o Centro Social Agir (ONG), com isso ampliou-se a participação comunitária, atualmente nossos assistidos têm idades entre 6 e 15 anos .</p>
                     <p>Usamos como ferramentas para contribuir com a reversão do quadro social, projetos voltados ao ensino da língua inglesa, cidadania, culinária, artes, vôlei, musica, preservação ambiental e complementação escolar.  Buscando também a parceria com a comunidade, setores privados e governamentais, a fim de integrar conhecimento e experiências, que juntos resultam em uma solução de desenvolvimento social e sustentável.</p>
                     <p>Os nossos desafios tem sido diários, mas temos nos surpreendido com o desenvolvimento de nossas crianças, elas amam estar conosco e é pensando nelas que podemos dizer que todo o trabalho empenhado vale a pena.</p>
                 </div>
             </section>
-            <section>
-                <h2>Ações</h2>
+            <section id="acoes">
+                <h1>Ações</h1>
                 <div>
-                    <h3>Complementação Escolar</h3>
+                    <h2>Complementação Escolar</h2>
                     <p>A complementação escolar vem romper as barreiras da desigualdade educacional, fazendo com que os assistidos tenham a oportunidade de revisar os conteúdos estudados em sala de aula com suporte personalizado de forma a acompanhar o ritmo de aprendizagem de cada criança.</p>
                     <p>Contamos com voluntárias especializadas na área da educação, que duas vezes por semana desenvolvem atividades complementares com nossos assistidos, e de forma criativa nossas crianças têm vencido suas limitações.</p>
                 </div>
                 <div>
                     <img src="" alt="">
-                    <h3>Projeto Semeando Cidadania</h3>
+                    <h2>Projeto Semeando Cidadania</h2>
                     <p>A cidadania está ligada ao conjunto de direitos e deveres civis, políticos e sociais do cidadão, entender o sentido de cidadania ajuda a compreender quem somos e onde podemos chegar na sociedade,  de forma que a justiça possa ser colocada em prática. O projeto visa promover um ambiente questionador onde são abordados temas do cotidiano das crianças.</p>
                     <p>É pensando na necessidade de construir cidadãos capazes de cumprir seus deveres e reconhecerem seus direitos que decidimos iniciar o projeto cidadania. As aulas acontecem uma vez na semana com duração de 3 horas, além de aulas em ambientes externos de forma esporádica fomentando assim a aprendizagem na prática.</p>
                     <p>Este projeto conta com uma universitária de psicologia que atua de forma voluntária e abrange crianças de 10 a 13 anos. Também contamos com profissionais voluntários que contribuem com sua presença e conhecimento ocasionalmente dependendo da temática abordada nas aulas.</p>
@@ -51,7 +52,7 @@
                 </div>
                 <div>
                     <video></video>
-                    <h3>Projeto Todos por Um</h3>
+                    <h2>Projeto Todos por Um</h2>
                     <p>O objetivo do Projeto Todos por Um é estimular a proatividade, o espírito crítico e cooperativo das crianças, através de atividades que levem ao desenvolvimento da consciência socioambiental. E também sensibilizá-las sobre o meio em que vivem, a sua importância e a melhoria da qualidade deste, para este projeto contamos com uma voluntária mestre em biologia que estimula o aprendizado de nossos assistidos através de ações de reciclagem, incluindo o exercício de entender a importância de se reciclar, o problema que é a geração de resíduos sólidos nos tempos atuais e o papel de cada um como agente transformador.</p>
                     <p>Também trabalhamos responsabilidade ambiental visando desenvolver o protagonismo de cada indivíduo, uma maneira de mostrar às crianças que todos têm participação no meio em que vivem.</p>
                     <p>Neste projeto abordamos o meio ambiente ao nosso redor e em que estamos inseridos. Isso inclui o Parque Nacional da Restinga de Jurubatiba, localizado no município de Macaé, Carapebus e Quissamã. As crianças são ensinadas sobre a importância da Unidade de Conservação para o nosso município, suas características e a obrigação de todos os cidadãos na proteção e conservação deste ambiente.</p>
@@ -60,9 +61,9 @@
             </section>
         </main>
         
-        <footer>
+        <footer id="contato">
             <div>
-                <h2>Contato</h2>
+                <h1>Contato</h1>
                 <p>jaquelineagir@gmail.com</p>
                 <p>22 99788-1006</p>
                 <img src="" alt="">
