--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-    	<header id="home">
+      <header id="home">
             <nav>
                 <ul>
                     <li>home</li>
@@ -43,7 +43,7 @@
                     <p>Contamos com voluntárias especializadas na área da educação, que duas vezes por semana desenvolvem atividades complementares com nossos assistidos, e de forma criativa nossas crianças têm vencido suas limitações.</p>
                 </div>
                 <div>
-                    <img src="" alt="">
+                    <img src="Assets/DSC05185.JPG" alt="">
                     <h2>Projeto Semeando Cidadania</h2>
                     <p>A cidadania está ligada ao conjunto de direitos e deveres civis, políticos e sociais do cidadão, entender o sentido de cidadania ajuda a compreender quem somos e onde podemos chegar na sociedade,  de forma que a justiça possa ser colocada em prática. O projeto visa promover um ambiente questionador onde são abordados temas do cotidiano das crianças.</p>
                     <p>É pensando na necessidade de construir cidadãos capazes de cumprir seus deveres e reconhecerem seus direitos que decidimos iniciar o projeto cidadania. As aulas acontecem uma vez na semana com duração de 3 horas, além de aulas em ambientes externos de forma esporádica fomentando assim a aprendizagem na prática.</p>
@@ -79,5 +79,3 @@
         </footer>
 
     </body>
-
-</html>
