--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                 <p>O Centro Social Agir é uma organização sem fins lucrativos que atua desde 2015 no município de Carapebus, trata-se de uma iniciativa idealizada por pessoas, que decidiram doar o seu tempo e conhecimento, com a intenção de beneficiar crianças e adolescentes do entorno.</p>
                 <p>Nossa Missão não é simplesmente ocupar o tempo ocioso de crianças e adolescentes, mas sim afastá-las da marginalidade, através de ações sociais, atividades esportivas, culturais, educativas e de lazer, queremos  contribuir para o desenvolvimento familiar, social, intelectual e profissional de crianças e adolescentes.</p>
             </div>
-    	</header>
+        </header>
         
         <main>
             <section id="sobre">
                 <div>
-                    <h1>Sobre</h1>
+                    <h2>Sobre</h2>
                     <!-- Tive que trocar para h1 -->
                     <p>Em 2012 iniciou-se as ações sociais, no bairro  Alto do Caxanga na cidade de Carapebus a localidade encontra-se em processo de favelização, (dados comprovados pelo CRAS), onde percebeu-se a carência de um projeto estruturado, podendo ter ações contínuas, com a experiência acumulada iniciou-se em 2015 efetivamente o Centro Social Agir (ONG), com isso ampliou-se a participação comunitária, atualmente nossos assistidos têm idades entre 6 e 15 anos .</p>
                     <p>Usamos como ferramentas para contribuir com a reversão do quadro social, projetos voltados ao ensino da língua inglesa, cidadania, culinária, artes, vôlei, musica, preservação ambiental e complementação escolar.  Buscando também a parceria com a comunidade, setores privados e governamentais, a fim de integrar conhecimento e experiências, que juntos resultam em uma solução de desenvolvimento social e sustentável.</p>
@@ -36,23 +36,23 @@
                 </div>
             </section>
             <section id="acoes">
-                <h1>Ações</h1>
-                <div>
-                    <h2>Complementação Escolar</h2>
+                <h2>Ações</h2>
+                <div class="div1">
+                    <h3>Complementação Escolar</h3>
                     <p>A complementação escolar vem romper as barreiras da desigualdade educacional, fazendo com que os assistidos tenham a oportunidade de revisar os conteúdos estudados em sala de aula com suporte personalizado de forma a acompanhar o ritmo de aprendizagem de cada criança.</p>
                     <p>Contamos com voluntárias especializadas na área da educação, que duas vezes por semana desenvolvem atividades complementares com nossos assistidos, e de forma criativa nossas crianças têm vencido suas limitações.</p>
-                </div>
-                <div>
                     <img src="Assets/DSC05185.JPG" alt="">
-                    <h2>Projeto Semeando Cidadania</h2>
+                </div>
+                <div class="div2">
+                    <h3>Projeto Semeando Cidadania</h3>
                     <p>A cidadania está ligada ao conjunto de direitos e deveres civis, políticos e sociais do cidadão, entender o sentido de cidadania ajuda a compreender quem somos e onde podemos chegar na sociedade,  de forma que a justiça possa ser colocada em prática. O projeto visa promover um ambiente questionador onde são abordados temas do cotidiano das crianças.</p>
                     <p>É pensando na necessidade de construir cidadãos capazes de cumprir seus deveres e reconhecerem seus direitos que decidimos iniciar o projeto cidadania. As aulas acontecem uma vez na semana com duração de 3 horas, além de aulas em ambientes externos de forma esporádica fomentando assim a aprendizagem na prática.</p>
                     <p>Este projeto conta com uma universitária de psicologia que atua de forma voluntária e abrange crianças de 10 a 13 anos. Também contamos com profissionais voluntários que contribuem com sua presença e conhecimento ocasionalmente dependendo da temática abordada nas aulas.</p>
                     <p>A rotina consiste na apresentação e discussão de um tema, em seguida as crianças são convidadas a participarem de rodas de conversas a respeito do conteúdo. Contextualização prática dos conteúdos teóricos abordados por meio de: produção de redação, gincanas, jogos de interação, filmes, leituras diversas, roda de conversa, palestra, passeios interativos, realização de ações solidárias e de conscientização.</p>
                 </div>
-                <div>
+                <div class="div3">
                     <video></video>
-                    <h2>Projeto Todos por Um</h2>
+                    <h3>Projeto Todos por Um</h3>
                     <p>O objetivo do Projeto Todos por Um é estimular a proatividade, o espírito crítico e cooperativo das crianças, através de atividades que levem ao desenvolvimento da consciência socioambiental. E também sensibilizá-las sobre o meio em que vivem, a sua importância e a melhoria da qualidade deste, para este projeto contamos com uma voluntária mestre em biologia que estimula o aprendizado de nossos assistidos através de ações de reciclagem, incluindo o exercício de entender a importância de se reciclar, o problema que é a geração de resíduos sólidos nos tempos atuais e o papel de cada um como agente transformador.</p>
                     <p>Também trabalhamos responsabilidade ambiental visando desenvolver o protagonismo de cada indivíduo, uma maneira de mostrar às crianças que todos têm participação no meio em que vivem.</p>
                     <p>Neste projeto abordamos o meio ambiente ao nosso redor e em que estamos inseridos. Isso inclui o Parque Nacional da Restinga de Jurubatiba, localizado no município de Macaé, Carapebus e Quissamã. As crianças são ensinadas sobre a importância da Unidade de Conservação para o nosso município, suas características e a obrigação de todos os cidadãos na proteção e conservação deste ambiente.</p>
@@ -63,7 +63,7 @@
         
         <footer id="contato">
             <div>
-                <h1>Contato</h1>
+                <h2>Contato</h2>
                 <p>jaquelineagir@gmail.com</p>
                 <p>22 99788-1006</p>
                 <img src="" alt="">
