--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
     </div>
     <div class="vnw">
-        <p class="vnw__text"> Desenvolvido por alunos do <a class="vnw__link" href="http://www.vainaweb.com.br/" target="_blank">Vai na Web</a></p>
+        <p class="vnw__text"> Desenvolvido por estudantes do <a class="vnw__link" href="http://www.vainaweb.com.br/" target="_blank">Vai na Web</a></p>
     </div>
 </footer>
 </body>
